# regatron-interface

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .ycm_extra_conf.py  .ycm_flags.json  API.md  CMakeLists.txt  DEPENDENCIES.md  INSTALLATION.md  NOTES.md  Notes.md  README.md  UTILS.md  appveyor.yml  conanfile.py  requirements.txt
cmake/: CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
docs/: Comm_8hpp_source.html  IBC_8hpp_source.html  Instrumentator_8hpp_source.html  Logger_8hpp_source.html  Match_8hpp_source.html  Readings_8hpp_source.html  Regatron_8hpp_source.html  Server_8hpp_source.html  V3_880_800_0130072014_01_07Linux_08_2include_2serialiolib_8h_source.html  V3_888_800_0128042020_2include_2serialiolib_8h_source.html  Version_8hpp_source.html  annotated.html  classNet_1_1Handler-members.html  classNet_1_1Handler.html  classNet_1_1Handler__inherit__graph.map  classNet_1_1Handler__inherit__graph.md5  classNet_1_1Server-members.html  classNet_1_1Server.html  classRegatron_1_1Comm-members.html  classRegatron_1_1Comm.html  classRegatron_1_1CommException-members.html  classRegatron_1_1CommException.html  classRegatron_1_1CommException__coll__graph.map  classRegatron_1_1CommException__coll__graph.md5  classRegatron_1_1Handler-members.html  classRegatron_1_1Handler.html  classRegatron_1_1Handler__inherit__graph.map  classRegatron_1_1Handler__inherit__graph.md5  classRegatron_1_1IBC-members.html  classRegatron_1_1IBC.html  classRegatron_1_1Match-members.html  classRegatron_1_1Match.html  classRegatron_1_1Readings-members.html  classRegatron_1_1Readings.html  classRegatron_1_1Version-members.html  classRegatron_1_1Version.html  classUtils_1_1Logger-members.html  classUtils_1_1Logger.html  classes.html  classutils_1_1InstrumentationTimer-members.html  (+132 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  (+13 more)
scripts/: Create-Shortcut.ps1  Start-Regatron.ps1  client.py  client_unix.py
services/: cons-regatron-interface@.service
src/: CMakeLists.txt  main.cpp  nohup.out
src/dumpster/: CustomFormat.cpp
src/executable/: CMakeLists.txt  main.cpp
src/log/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/net/: CMakeLists.txt  Handler.cpp  Handler.hpp  Server.cpp  Server.hpp
src/regatron/: CMakeLists.txt  Comm.cpp  Comm.hpp  ControllerSettings.cpp  ControllerSettings.hpp  DeviceAccessControl.cpp  DeviceAccessControl.hpp  Exception.hpp  Handler.cpp  Handler.hpp  IBC.cpp  IBC.hpp  Match.cpp  Match.hpp  ModuleStatusReadings.cpp  ModuleStatusReadings.hpp  Readings.cpp  Readings.hpp  Regatron.hpp  StatusReadings.cpp  StatusReadings.hpp  SystemStatusReadings.cpp  SystemStatusReadings.hpp  Version.cpp  Version.hpp
src/utils/: Instrumentator.hpp
test/: CMakeLists.txt  client.py  client_unix.py  general_tests.cpp  instrumentator_tests.cpp  linuxTcioSample.cpp
test_tcio/: CMakeLists.txt  linuxTcioSample.cpp
